# tensor

./: .clang-format  .clangd  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
tensor/: functions.c  getset.c  init.c  mapping.c  members.c  methods.c  module.c  repr.c  sequence.c  tensor.c  tensor.h  tensorobject.c
tests/: test_subclass.py  test_tensor.py
