[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor"
version = "0.0.1"

[dependency-groups]
dev = [
    "setuptools",
    "pre-commit",
]
test = [
    "numpy",
    "pytest",
    "pytest-run-parallel[psutil]"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "-rfesxX",
  "-v",
]
log_cli_level = "DEBUG"
